# moin-moin

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  text-image-to-text.ipynb
data/: categories-descriptions.txt  categories.py
db/: moin-moin.db
docker/: backend.dockerfile  frontend.dockerfile
nbs/: download_images.ipynb
notebooks/: download_images.ipynb  eval.ipynb  requirements.txt
src/moin_moin/: __init__.py
src/moin_moin/backend/: __init__.py  _db.py  _institutions.py  _ml.py  api.py  db.py  ml.py
src/moin_moin/frontend/: __init__.py  __main__.py  _conf.py  _issue_tracker_page.py  _overview.py  _report_an_issue_page.py  _user_input.py  app.py  app_conf.py  general_overview.py  user_input_layer.py
