[project]
name = "moin-moin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "geopy>=2.4.1",
    "httpx>=0.27.2",
    "numpy<2",
    "pillow==10.4.0",
    "sentence-transformers==3.3.1",
    "sqlmodel>=0.0.22",
    "streamlit>=1.40.1",
    "torch==2.2.2+cpu",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
moin-moin = "moin_moin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastbook>=0.0.29",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "jupyterlab>=4.3.1",
    "jupyterlab-vim>=4.1.4",
]
